--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="Register.html">Register</a>
                         </li>
                     </ul>
                 </div>
