--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KBC Lite - Homepage</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,7 @@
 
 
     <div class="d-flex flex-column min-vh-100">
-        <nav class="navbar navbar-expand-lg primary-color">
+        <nav class="navbar navbar-expand-lg primary-color py-4 stroke">
             <div class="container-fluid">
                 <div>
                     <a class="navbar-brand" href="#">Navbar</a>
@@ -27,20 +27,40 @@
                 </div>
 
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Login</a>
+                    <ul class="navbar-nav ms-auto me-5">
+                        <li class="nav-item me-3">
+                            <a class="nav-link fs-4" aria-current="page" href="#">Login</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Register.html">Register</a>
+                        <li class="nav-item me-5">
+                            <a class="nav-link fs-4" href="register.html">Register</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="flex-grow-1">
-            PostStar
+        <div class="flex-grow-1 d-flex w-100 h-100 align-items-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-12 mt-3 mt-lg-3">
+                        <h1 class="fw-semibold text-primary ">WELCOME TO KBC LITE</h1>
+                        <p class="fw-semibold text-dark fs-4 mt-5">If you love testing your knowledge and challenging your 
+                            brain, then you've come to the right place. We offer a 
+                            wide range of quizzes on various topics, from history 
+                            and geography to pop culture and sports. Whether you're 
+                            looking to learn something new or just want to have fun, 
+                            our quizzes are designed to engage and entertain you. So, 
+                            get ready to put your thinking cap on and start exploring 
+                            our quiz collection today!
+                        </p>
+                    </div>
+                    <div class="col-lg-6 col-12 mb-5 mb-lg-0">
+                        <div class="d-flex h-100 align-items-center">
+                            <img src="/Assets/homepage.png" class="rounded mx-auto d-block w-100 h-100" alt="Student Thinking">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
