--- a/Register.html
+++ b/Register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,125 +11,126 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class='d-flex align-items-center h-100 justify-content-center w-100'>
-        
-    </div>
+
 
     <div class="d-flex flex-column min-vh-100">
-      <nav class="navbar navbar-expand-lg primary-color py-4 stroke">
-          <div class="container-fluid">
-              <div>
-                  <a class="navbar-brand" href="#">Navbar</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
-              </div>
-
-              <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav ms-auto me-5">
-                      <li class="nav-item me-3">
-                          <a class="nav-link fs-4" aria-current="page" href="#">Login</a>
-                      </li>
-                      <li class="nav-item me-5">
-                          <a class="nav-link fs-4" href="Register.html">Register</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </nav>
-
-      <div class="flex-grow-1 d-flex w-100 h-100 align-items-center">
-          <div class="container">
-              <div class="row">
-                <div class="col-lg-4 offset-lg-4 col-12">
-                  <form>
-                    <div class="mb-3">
-                        <label for="inputFullName" class="form-label">Full Name</label>
-                        <input type="text" class="form-control" id="inputFullName">
-                      </div>
-                    <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="exampleInputPassword1" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputConfirmPassword1" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="exampleInputConfirmPassword1">
-                      </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
+        <nav class="navbar navbar-expand-lg primary-color py-4 stroke">
+            <div class="container-fluid">
+                <div>
+                    <a class="navbar-brand" href="home.html">Navbar</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </div>
-              </div>
-          </div>
-          
-      </div>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto me-5">
+                        <li class="nav-item me-3">
+                            <a class="nav-link fs-4" aria-current="page" href="login.html">Login</a>
+                        </li>
+                        <li class="nav-item me-5">
+                            <a class="nav-link fs-4" href="register.html">Register</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="flex-grow-1 d-flex w-100 h-100 align-items-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 mb-5">
+                        <h2 class="text-center">REGISTER</h2>
+                    </div>
+                    <div class="col-lg-4 offset-lg-4 col-12">
+                        <form>
+                            <div class="mb-3">
+                                <label for="inputFullName" class="form-label">Full Name</label>
+                                <input type="text" class="form-control" id="inputFullName">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp">
+                                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputConfirmPassword1" class="form-label">Confirm Password</label>
+                                <input type="password" class="form-control" id="exampleInputConfirmPassword1">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Register</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
 
-      <footer class="footer primary-color pt-3">
-          <div class="container">
-              <div class="row">
-                  <div class="col-md-6">
-                      <img src=""></img>
-                      <p class="text-white">
-                          Ekta Jaygar Nam
-                          <br />
-                          <i class="fa fa-phone"></i> Dibo Na
-                          &nbsp;&nbsp;|&nbsp;&nbsp;
-                          <i class="fa fa-fax"></i> Fax:
-                          No Fax
-                          <br />
-                          <i class="fa fa-envelope"></i> amader
-                      </p>
-                  </div>
-                  <div class="col-md-5 offset-lg-1">
-                      <div class="">
-                          <ul class="list-group list-group-horizontal mb-3">
-                              <li class="border border-2 rounded border-light me-2">
-                                  <a href=""
-                                      class="btn btn-default text-white social-icon" target="_blank">
-                                      <i class="fa fa-facebook"></i>
-                                  </a>
-                              </li>
-                              <li class="border border-2 rounded border-light me-2">
-                                  <a href=""
-                                      class="btn btn-default text-white social-icon" target="_blank">
-                                      <i class="fa fa-twitter"></i>
-                                  </a>
-                              </li>
-                              <li class="border border-2 rounded border-light me-2">
-                                  <a href=""
-                                      class="btn btn-default text-white social-icon" target="_blank">
-                                      <i class="fa fa-instagram"></i>
-                                  </a>
-                              </li>
-                              <li class="border border-2 rounded border-light">
-                                  <a href=""
-                                      class="btn btn-default text-white social-icon" target="_blank">
-                                      <i class="fa fa-youtube"></i>
-                                  </a>
-                              </li>
-                          </ul>
-                          <div class="clearfix"></div>
-                      </div>
-                      <div class="text-white">
-                          Developed & Maintained by Us
-                          <br /> &copy; 2023-2023 KBC Lite. No rights
-                          reserved.
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </footer>
-  </div>
+        <footer class="footer primary-color pt-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src=""></img>
+                        <p class="text-white">
+                            Ekta Jaygar Nam
+                            <br />
+                            <i class="fa fa-phone"></i> Dibo Na
+                            &nbsp;&nbsp;|&nbsp;&nbsp;
+                            <i class="fa fa-fax"></i> Fax:
+                            No Fax
+                            <br />
+                            <i class="fa fa-envelope"></i> amader
+                        </p>
+                    </div>
+                    <div class="col-md-5 offset-lg-1">
+                        <div class="">
+                            <ul class="list-group list-group-horizontal mb-3">
+                                <li class="border border-2 rounded border-light me-2">
+                                    <a href="" class="btn btn-default text-white social-icon" target="_blank">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li class="border border-2 rounded border-light me-2">
+                                    <a href="" class="btn btn-default text-white social-icon" target="_blank">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="border border-2 rounded border-light me-2">
+                                    <a href="" class="btn btn-default text-white social-icon" target="_blank">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li class="border border-2 rounded border-light">
+                                    <a href="" class="btn btn-default text-white social-icon" target="_blank">
+                                        <i class="fa fa-youtube"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="text-white">
+                            Developed & Maintained by Us
+                            <br /> &copy; 2023-2023 KBC Lite. No rights
+                            reserved.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
