--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KBC Lite - Homepage</title>
+    <title>KBC Lite - Register</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -37,30 +37,32 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav> 
 
         <div class="flex-grow-1 d-flex w-100 h-100 align-items-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-12 mt-3 mt-lg-3">
-                        <h1 class="fw-semibold text-primary ">WELCOME TO KBC LITE</h1>
-                        <p class="fw-semibold text-dark fs-4 mt-5">If you love testing your knowledge and challenging your 
-                            brain, then you've come to the right place. We offer a 
-                            wide range of quizzes on various topics, from history 
-                            and geography to pop culture and sports. Whether you're 
-                            looking to learn something new or just want to have fun, 
-                            our quizzes are designed to engage and entertain you. So, 
-                            get ready to put your thinking cap on and start exploring 
-                            our quiz collection today!
-                        </p>
+                    <div class="col-12 mb-5">
+                        <h2 class="text-center">LOGIN</h2>
                     </div>
-                    <div class="col-lg-6 col-12 mb-5 mb-lg-0">
-                        <div class="d-flex h-100 align-items-center">
-                            <img src="/Assets/homepage.png" class="rounded mx-auto d-block w-100 h-100" alt="Student Thinking">
-                        </div>
+                    <div class="col-lg-4 offset-lg-4 col-12">
+                        <form>
+                            <div class="mb-3">
+                              <label for="exampleInputEmail1" class="form-label">Email address</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                            </div>
+                            <div class="mb-3">
+                              <label for="exampleInputPassword1" class="form-label">Password</label>
+                              <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            
+                            <button type="submit" class="btn btn-primary">Login</button>
+                          </form>
                     </div>
                 </div>
             </div>
+
         </div>
 
 
@@ -84,26 +86,22 @@
                         <div class="">
                             <ul class="list-group list-group-horizontal mb-3">
                                 <li class="border border-2 rounded border-light me-2">
-                                    <a href=""
-                                        class="btn btn-default text-white social-icon" target="_blank">
+                                    <a href="" class="btn btn-default text-white social-icon" target="_blank">
                                         <i class="fa fa-facebook"></i>
                                     </a>
                                 </li>
                                 <li class="border border-2 rounded border-light me-2">
-                                    <a href=""
-                                        class="btn btn-default text-white social-icon" target="_blank">
+                                    <a href="" class="btn btn-default text-white social-icon" target="_blank">
                                         <i class="fa fa-twitter"></i>
                                     </a>
                                 </li>
                                 <li class="border border-2 rounded border-light me-2">
-                                    <a href=""
-                                        class="btn btn-default text-white social-icon" target="_blank">
+                                    <a href="" class="btn btn-default text-white social-icon" target="_blank">
                                         <i class="fa fa-instagram"></i>
                                     </a>
                                 </li>
                                 <li class="border border-2 rounded border-light">
-                                    <a href=""
-                                        class="btn btn-default text-white social-icon" target="_blank">
+                                    <a href="" class="btn btn-default text-white social-icon" target="_blank">
                                         <i class="fa fa-youtube"></i>
                                     </a>
                                 </li>
